<resources>
    <string name="app_name">Maxler Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_text">Search songs, playlists, and artists</string>
    <string name="now_playing">NOW PLAYING</string>


    <!--OnBoarding Slides-->
    <string name="back">Back</string>
    <string name="go_it">Go It</string>
    <string name="board_title_1">Music is life</string>
    <string name="board_description_1">Balances your emotions and make you to feel happy.</string>
    <string name="board_title_2">Enjoy Music</string>
    <string name="board_description_2">Massive music for you to listen to enjoy each moment of music.</string>
    <string name="board_title_3">Without Ads</string>
    <string name="board_description_3">Enjoy your music without any ad and keep listening it.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="app_icon">app_icon</string>
    <string name="get_started">get_started</string>
    <string name="goToAppInfo">Go to App Info</string>
    <string name="read_zstorage_permission_info">read storage permission info</string>
    <string name="permission_request_text">Maxler Player App needs permission to access device Media
        to provide required services. Please allow the permission</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_request">Permission Request</string>
    <string name="on_boarding_image">on_boarding_image</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="shuffle_playback">Shuffle Playback</string>


    <!-- screens  titles-->
    <string name="favorite">Favorite</string>
    <string name="recent">Recent</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="folders">Folders</string>
    <string name="all_songs">All Songs</string>
    <string name="look_and_feel">Look and Feel</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="discover">Discover</string>
    <string name="watch">Watch</string>
    <string name="my_music">My music</string>


    <!--songs menu items-->
    <string name="now_playing_queue">Now playing queue</string>
    <string name="play_later">Play later</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>


    <!-- songs sort order -->
    <string name="sort_order">Sort order</string>
    <string name="sort_order_a_z">Ascending</string>
    <string name="sort_order_z_a">Descending</string>
    <string name="sort_order_artist">Artist</string>
    <string name="sort_order_album">Album</string>
    <string name="sort_order_year">Year</string>
    <string name="sort_order_date_modified">Date modified</string>
    <string name="sort_order_date_added">Date Added</string>
    <string name="sort_order_composer">Composer</string>
    <string name="sort_order_duration_songs">Song Duration</string>


    <!-- notification -->
    <string name="skip_to_next">Skip to next song</string>
    <string name="skip_to_previous">Skip to previous song</string>
    <string name="play_song">Play song</string>
    <string name="pause_song">Pause song</string>
    <string name="notification_channel">Now Playing</string>
    <string name="notification_channel_description">Shows what music is currently playing in Jade Player</string>





    <string name="action_about">About</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_genre">Go to genre</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_set">Start</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_toggle_favorite">Toggle favorite</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>





    <string name="favorites">Favorites</string>
    <string name="drive_mode">Drive mode</string>



    <!-- no found -->
    <string name="no_albums">You have no albums</string>
    <string name="no_artists">You have no artists</string>
    <string name="no_audio_ID">"Play a song first, then try again."</string>
    <string name="no_equalizer">No equalizer found</string>
    <string name="no_genres">You have no genres</string>
    <string name="no_lyrics_found">No lyrics found</string>
    <string name="no_playing_queue">No songs playing</string>
    <string name="no_playlists">You have no playlists</string>
    <string name="no_purchase_found">No purchase found.</string>
    <string name="no_results">No results</string>
    <string name="no_songs">You have no songs</string>
    <string name="equalizer">Equalizer</string>
    <string name="playback">Playback</string>

</resources>