<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:background="@null"
            android:backgroundTint="@android:color/transparent"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/songs_menu_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Anfal"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/playing_items_color_songs_title"
                android:textSize="@dimen/text_size_large"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/margin_large" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/play_later"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/play_later"
                android:textAlignment="center"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:textStyle="bold"
                android:gravity="start|center"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/playing_items_color_songs_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/songs_menu_title"
                android:drawableEnd="@drawable/ic_play_later"
                app:drawableTint="@color/playing_items_color_songs_title"
                android:layout_margin="@dimen/margin_small"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_to_queue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/add_to_queue"
                android:textAlignment="center"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:gravity="start|center"
                android:textColor="@color/playing_items_color_songs_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/play_later"
                android:drawableEnd="@drawable/ic_add_to_queue"
                android:clickable="true"
                android:focusable="true"
                android:layout_margin="@dimen/margin_small"
                app:drawableTint="@color/playing_items_color_songs_title"
                 />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_to_playlist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/add_to_playlist"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/playing_items_color_songs_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_to_queue"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:gravity="start|center"
                android:drawableEnd="@drawable/playlist_add"
                app:drawableTint="@color/playing_items_color_songs_title"
                android:layout_margin="@dimen/margin_small"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/delete"
                android:clickable="true"
                android:focusable="true"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:gravity="start|center"
                android:textColor="@color/playing_items_color_songs_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_to_playlist"
                android:drawableEnd="@drawable/ic_delete"
                app:drawableTint="@color/playing_items_color_songs_title"
                android:layout_margin="@dimen/margin_small" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/share"
                android:textAlignment="center"
                android:clickable="true"
                android:focusable="true"
                android:textStyle="bold"
                android:textColor="@color/playing_items_color_songs_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/delete"
                android:drawableEnd="@drawable/ic_share"
                app:drawableTint="@color/playing_items_color_songs_title"
                android:layout_margin="@dimen/margin_small"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:gravity="start|center" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>